--- a/html/cell6.html
+++ b/html/cell6.html
@@ -199,6 +199,7 @@
         .result {
             display: none;
             font-weight: 700;
+            color: #FF2A2A;
         }
     </style>
 </head>
@@ -227,7 +228,7 @@
 
             <div class="record-board">
                 <div class="record record-1">
-                    <p class="game">24.nn.nn KT vs @@</p>
+                    <p class="game">24.05.09 KT vs NC</p>
                     <div class="result-box">
                         <div class="box">?</div>
                         <span class="result">WIN</span>
@@ -235,23 +236,23 @@
                 </div>
 
                 <div class="record record-2">
-                    <p class="game">24.nn.nn KT vs @@</p>
-                    <div class="result-box">
-                        <div class="box">?</div>
-                        <span class="result">LOSE</span>
-                    </div>
-                </div>
-
-                <div class="record record-3">
-                    <p class="game">24.nn.nn KT vs @@</p>
+                    <p class="game">24.05.14 KT vs 롯데</p>
                     <div class="result-box">
                         <div class="box">?</div>
                         <span class="result">WIN</span>
                     </div>
                 </div>
 
+                <div class="record record-3">
+                    <p class="game">24.06.06 KT vs 한화</p>
+                    <div class="result-box">
+                        <div class="box">?</div>
+                        <span class="result">LOSE</span>
+                    </div>
+                </div>
+
                 <div class="record record-4">
-                    <p class="game">24.nn.nn KT vs @@</p>
+                    <p class="game">24.06.27 KT vs SSG</p>
                     <div class="result-box">
                         <div class="box">?</div>
                         <span class="result">WIN</span>
@@ -281,7 +282,7 @@
                     // 일정 시간 후 팡파레 효과 없애기
                     setTimeout(() => {
                         pangpare.style.display = "none";
-                    }, 1300);
+                    }, 700);
                 }
             });
         });
