--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                     title="1번째 기록"
                 >
                     <h3 class="cell-numb">1th record</h3>
-                    <p class="cell-desc">~이러이러한 셀입니다 설명~</p>
+                    <p class="cell-desc">
+                        혼자 2박 3일 갔다 온 오사카 여행.｡.:*☆<br>
+                        혼자지만 그래서 더 재밌었다 얏홍ㅎㅎㅎ
+                    </p>
                 </a>
                 <a
                     class="cells cell-2"
@@ -193,7 +196,9 @@
                 >
                     <h3 class="cell-numb">8th record</h3>
                     <p class="cell-desc">
-                        ~이러이러한 셀입니다 설명~
+                        엠이, 쩡이, 혀니랑 넷이서<br>
+                        3박 4일 오사카 여행( •̀ ω •́ )y<br>
+                        알차게 즐기고 왔다~!!
                     </p>
                 </a>
                 <a
@@ -203,7 +208,9 @@
                 >
                     <h3 class="cell-numb">9th record</h3>
                     <p class="cell-desc">
-                        ~이러이러한 셀입니다 설명~
+                        내 스물두살 생일🎂<br>
+                        축하도 많이 받고, 친구들 만나서 밥도 먹고<br>
+                        행복한 22번째 생일이었다❤️
                     </p>
                 </a>
             </section>
