--- a/html/cell6.html
+++ b/html/cell6.html
@@ -19,7 +19,7 @@
             bottom: -13vh;
             left: 8vw;
             transform: rotate(-12deg);
-            width: 20vw;
+            width: 30vw;
             height: auto;
             animation: rotation 2s cubic-bezier(0.7,-0.23, 0.2, 0.88) infinite;
         }
@@ -27,8 +27,8 @@
         .vic {
             position: absolute;
             top: -10vh;
-            right: 6.2vw;
-            width: 23vw;
+            right: 9.2vw;
+            width: 27vw;
             height: auto;
             animation: up 2s cubic-bezier(0.53,-0.01, 0.49, 1.33) infinite;
         }
@@ -81,8 +81,8 @@
         }
 
         .pangpare div {
-            width: 23px;
-            height: 23px;
+            width: 2vw;
+            height: 2vw;
             border-radius: 50%;
             position: absolute;
         }
