--- a/html/cell3.html
+++ b/html/cell3.html
@@ -92,7 +92,7 @@
 
         // 캐릭터 이미지
         var img = new Image();
-        img.src = '../public/pig.png';
+        img.src = '../public/pig.PNG';
 
         var rse = {
             x : 0,
@@ -258,7 +258,7 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             // 캐릭터 되돌리기
-            img.src = '../public/pig.png';
+            img.src = '../public/pig.PNG';
             img.onload = () => {
                 rse.reset();
                 rse.draw();
