--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     href="./html/cell1.html"
                     title="1번째 기록"
                 >
-                    <h3 class="cell-numb">1th record</h3>
+                    <h3 class="cell-numb">1st record</h3>
                     <p class="cell-desc">
                         혼자 2박 3일 갔다 온 오사카 여행.｡.:*☆<br>
                         혼자지만 그래서 더 재밌었다 얏홍ㅎㅎㅎ
@@ -150,7 +150,7 @@
                     href="./html/cell2.html"
                     title="2번째 기록"
                 >
-                    <h3 class="cell-numb">2th record</h3>
+                    <h3 class="cell-numb">2nd record</h3>
                     <p class="cell-desc">
                         학교 가서 강의 듣고, 과제하고<br />
                         출근해서 열심히 일하고<br />
@@ -162,7 +162,7 @@
                     href="./html/cell3.html"
                     title="3번째 기록"
                 >
-                    <h3 class="cell-numb">3th record</h3>
+                    <h3 class="cell-numb">3rd record</h3>
                     <p class="cell-desc">
                         살이 너무 많이 불어났다...!!(＃°Д°)<br>
                         식단관리 해서 다시 원상복구 시키자 팟팅~!~!!
